2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Initialize 
	a ziplistentry's next_element with NULL
	before passing it to add_list_entry to
	fix a crash. Don't re-assign filename
	of a zip entry with the index name, as 
	that turns directories into files, and 
	breaks the zip files.

2007-02-04  Olivier Jolly <olivier.jolly@pcedev.com>

	* jartool.c: Enable fastjar to update an 
	existing .jar with an META-INF/INDEX.LIST 
	aka -i support. Still, it doesn't process 
	the MANIFEST.MF to index files coming from 
	dependant archives.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.h (__attribute__): Explicitely
	define it as a macro with one parameter.
	That allows splint to be used for checking 
	the code.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* configure: Regenerated.

	* configure.ac: Updated AC_INIT and 
	AM_INIT_AUTOMAKE to use the modern form.


2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* compress.c, compress.h, jargrep.c, 
	jartool.c, jartool.h, pushback.c, 
	zipfile.h: Removed Id and Log CVS tags.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* config.h.in, configure: Regenerated.

	* configure.ac: Removed checks for type-widths.
	Added checks for fixed size types.

	* jartool.h: Use fixed size types to define u1, 
	u2 and u4. Include inttypes.h and stdint.h if 
	necessary. Guard the config.h include. Don't
	include sys/types.h.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Use AC_CHECK_HEADERS_ONCE instead
	of AC_CHECK_HEADERS. Use AC_CHECK_FUNCS_ONCE instead
	of AC_CHECK_FUNCS.

	* configure: Regenerated.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* compile, texinfo.tex: Added new generated files.

	* INSTALL, Makefile.in, aclocal.m4, config.h.in, 
	configure, depcomp, install-sh, missing: Regenerated.

	* acinclude.m4, configure.ac: Autoupdated with 
	autoconf 2.61.

	* autogen.sh: Use autoreconf.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>
