@@ -1,5 +1,14 @@
 2007-02-04  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c: Added 2007 to copyright years,
+	and claimed my changes.
+	(OPTION_STRING) -i takes an argument.
+	(main) Set jarfile to the argument when option 
+	-i is parsed. Modified help string when no
+	action is given to include -i.
+
+2007-02-04  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (build_index): Initialize 
 	a ziplistentry's next_element with NULL
 	before passing it to add_list_entry to
